--- a/EM_GMM.ipynb
+++ b/EM_GMM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,11 +61,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'pi': [0.4, 0.3, 0.3],\n",
+       " 'theta': {'mu': [-0.05, 0.4000000000000001, -0.6000000000000001],\n",
+       "  'sigma2': [5.527499999999999, 4.46, 8.180000000000001]}}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "param = initEM(data['Var'], data['partition2'])\n"
+    "param = initEM(data['Var'], data['partition2'])\n",
+    "param\n"
    ]
   },
   {
@@ -77,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
