--- a/EM_GMM.ipynb
+++ b/EM_GMM.ipynb
@@ -291,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ELBO bonus question :\n",
+    "ELBO question :\n",
     "$$\n",
     "\\mathcal{L}(q, \\theta) = \\mathbb{E}_q \\left[ \\log p_\\theta(X, Z) \\right] + \\mathcal{H}(q)\n",
     "$$\n",
@@ -366,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -377,7 +377,7 @@
     "    param = initEM( X , partition_init)\n",
     "\n",
     "    logliks = []  \n",
-    "    loglik_t_1 = None  # Previous log-likelihood for convergence check\n",
+    "    loglik_t_1 = None  # prev log-likelihood for convergence check\n",
     "\n",
     "\n",
     "    for t in range(max_iter):\n",
